[package]
name = "neutrino_orders"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
